--- a/Style/main.css
+++ b/Style/main.css
@@ -589,7 +589,7 @@ body.showCart .cart-section {
 
     .slider {
         width: 100%;
-        height: calc(100vh - 700px);
+        height: calc(100vh - 740px);
         /* margin-top: 150px; */
         position: relative;
         overflow: hidden;
@@ -675,7 +675,7 @@ body.showCart .cart-section {
 
     .slider {
         width: 100%;
-        height: calc(100vh - 700px);
+        height: calc(100vh - 740px);
         /* margin-top: 150px; */
         position: relative;
         overflow: hidden;
@@ -767,7 +767,7 @@ body.showCart .cart-section {
 
     .slider {
         width: 100%;
-        height: calc(100vh - 600px);
+        height: calc(100vh - 640px);
         /* margin-top: 150px; */
         position: relative;
         overflow: hidden;
@@ -1030,7 +1030,7 @@ input[type=number] {
 
     .slider {
         width: 100%;
-        height: calc(100vh - 500px);
+        height: calc(100vh - 540);
         /* margin-top: 150px; */
         position: relative;
         overflow: hidden;
@@ -1279,7 +1279,7 @@ input[type=number] {
 
     .slider {
         width: 100%;
-        height: calc(100vh - 380px);
+        height: calc(100vh - 400px);
         /* margin-top: 150px; */
         position: relative;
         overflow: hidden;
@@ -1349,7 +1349,7 @@ input[type=number] {
 
     .slider {
         width: 100%;
-        height: calc(100vh - 400px);
+        height: calc(100vh - 440px);
         /* margin-top: 150px; */
         position: relative;
         overflow: hidden;
