--- a/Style/main.css
+++ b/Style/main.css
@@ -100,11 +100,13 @@ header {
 .header_top ion-icon {
     font-size: 35px;
     color: rgba(0, 0, 0, 0.886);
-    margin-right: 8px;
+    margin-right: 3px; /* Give space between icons and logo */
+    padding-left: 2px;
 }
 
 .header_top img {
     width: 100px;
+   margin-left: -33px; 
 }
 
 nav {
@@ -1085,63 +1087,6 @@ input[type=number] {
         font-size: 28px;
         font-weight: 500;
         margin-bottom: 6px;
-    }
-
-
-    .hero_for_phone {
-        display: none;
-        width: 100%;
-        height: 350px;
-    }
-
-    .hero_for_phone .hero-content {
-        width: 100%;
-        height: 350px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 100px;
-        position: relative;
-    }
-
-    .hero_for_phone .hero-content img {
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        object-fit: cover;
-        object-position: center center;
-    }
-
-    .hero_for_phone .text {
-        position: absolute;
-        left: 20px;
-        top: 20px;
-
-    }
-
-    .hero_for_phone .text h2 {
-        font-size: 16px;
-        font-weight: 600;
-
-    }
-
-    .hero_for_phone p {
-        width: 200px;
-        font-size: 10px;
-        font-weight: 300;
-        color: #868686;
-    }
-
-    .hero_for_phone .shop-btn {
-        margin-top: 20px;
-        background-color: transparent;
-        color: #000;
-        border: 1px solid #000;
-        padding: 10px;
-        width: 120px;
     }
 
     .information {
