--- a/Style/productDetails.css
+++ b/Style/productDetails.css
@@ -220,26 +220,19 @@ input[type=number] {
 }
 
 /* Modal Styles */
-.chart-section {
-    display: none; /* Hide by default */
-}
-.chart-section:not(.hidden) {
-    display: block; /* Show when not hidden */
-}
-.hidden {
-    display: none !important;
-}
-
 .size-chart-modal {
     display: none;
     position: fixed;
     z-index: 999;
-    inset: 0; /* shorthand for top, right, bottom, left */
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 50px 15px;
+    padding-top: 50px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
     overflow-y: auto;
-    animation: fadeInBackdrop 0.3s ease-in-out;
+    background-color: rgba(0,0,0,0.6);
 }
+
 
 /* Modal Inner Content */
 .size-chart-content {
